1、删除vc6工程 2、文件改名，lesson31 -> ms3d-acc 3、补充ms3d数据

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 /sample/NeHe/*.ncb
 /sample/NeHe/*.user
 /sample/NeHe/*.suo
+/src/ms3d-acc/*.txt
+/src/ms3d-acc/*.suo
+/src/ms3d-acc/*.user
+/src/*.suo
+/src/ms3d-acc/*.ncb
