--- a/src/ms3d-acc/ms3d-acc_vc9.vcproj
+++ b/src/ms3d-acc/ms3d-acc_vc9.vcproj
@@ -175,7 +175,7 @@
 				OutputFile="$(OutDir)/$(ProjectName).exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="&quot;$(ProjectDir)..\..\..\dependence\lib\share\&quot;;&quot;$(ProjectDir)..\..\..\dependence\lib\share\cuda\&quot;;&quot;$(ProjectDir)..\..\..\dependence\lib\share\cuda\common&quot;;&quot;$(ProjectDir)..\..\..\dependence\lib\$(ConfigurationName)\cuda&quot;"
+				AdditionalLibraryDirectories="&quot;$(ProjectDir)..\..\dependence\lib\share\&quot;;&quot;$(ProjectDir)..\..\..\dependence\lib\share\cuda\&quot;;&quot;$(ProjectDir)..\..\..\dependence\lib\share\cuda\common&quot;;&quot;$(ProjectDir)..\..\..\dependence\lib\$(ConfigurationName)\cuda&quot;"
 				ProgramDatabaseFile="$(OutDir)/$(TargetName).pdb"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
