--- a/src/ms3d-acc/ms3d-acc_vc10.vcxproj.filters
+++ b/src/ms3d-acc/ms3d-acc_vc10.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="timer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DrawScene.h">
@@ -55,6 +58,9 @@
     </ClInclude>
     <ClInclude Include="math\vgkTimer.h">
       <Filter>Math</Filter>
+    </ClInclude>
+    <ClInclude Include="timer.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
