新增另一套测时方案omp_get_wtime，结果一样； 发现时差-vbomap：6.2ms，运行一段时间后这部分耗时增长；

--- a/src/ms3d-acc/ms3d-acc_vc10.vcxproj.filters
+++ b/src/ms3d-acc/ms3d-acc_vc10.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="timer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="timerOMP.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DrawScene.h">
@@ -60,6 +63,9 @@
       <Filter>Math</Filter>
     </ClInclude>
     <ClInclude Include="timer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="timerOMP.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
