--- a/src/ms3d-acc/ms3d-acc_vc10.vcxproj
+++ b/src/ms3d-acc/ms3d-acc_vc10.vcxproj
@@ -167,6 +167,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="timer.cpp" />
+    <ClCompile Include="timerOMP.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DrawScene.h" />
@@ -177,6 +178,7 @@
     <ClInclude Include="math\math2.h" />
     <ClInclude Include="math\vgkTimer.h" />
     <ClInclude Include="timer.h" />
+    <ClInclude Include="timerOMP.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="math\matrix.inl" />
