工程加入ocl源文件

--- a/src/ms3d-acc/ms3d-acc_vc10.vcxproj
+++ b/src/ms3d-acc/ms3d-acc_vc10.vcxproj
@@ -191,6 +191,7 @@
     <None Include="math\quaternionImplementation.inl" />
     <None Include="math\vector.inl" />
     <None Include="math\vectorImplementation.inl" />
+    <None Include="SimpleOptimizations.cl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
