--- a/src/ms3d-acc/ms3d-acc_vc10.vcxproj.filters
+++ b/src/ms3d-acc/ms3d-acc_vc10.vcxproj.filters
@@ -106,8 +106,13 @@
     <None Include="SimpleOptimizations.cl">
       <Filter>Source Files</Filter>
     </None>
-    <None Include="SimpleOptimizations.cu">
+    <None Include="SimpleOptimizations.cuh">
       <Filter>Source Files</Filter>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <CudaCompile Include="SimpleOptimizations.cu">
+      <Filter>Source Files</Filter>
+    </CudaCompile>
   </ItemGroup>
 </Project>
